# simpleUt

./: CMakeLists.txt  LICENSE  README.md  SimpleUt.hpp
Source/: SimpleUtEx.cpp
